2019-1/231/users/4204/executions/1580_1328.log
== TEST (2019-03-12 19:32:35) 
-- CODE:
prin(35*20)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(35*20)
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:33:41) 
-- CODE:
prin(20*35)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(20*35)
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:33:49) 
-- CODE:
print(20*35)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:33:52) 
-- CODE:
print(20*35)
-- EXECUTION TIME:
0.144956
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
